--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1056,6 +1056,16 @@ section {
   content: "/";
 }
 
+@media (max-width: 500px){
+  #hero .hero-container{
+    margin-left: 0px;
+  }
+
+  #hero p{
+    font-size: 16px;
+  }
+}
+
 @media (max-width: 768px) {
   .breadcrumbs .d-flex {
     display: block !important;
